--- a/siteMobApp/src/app/login/login.page.html
+++ b/siteMobApp/src/app/login/login.page.html
@@ -39,8 +39,7 @@
   <ion-row>
     <div></div>
     <div class="ion-text-center ion-padding">
-      If you don't have an account, please <a routerLink='/register'>
-        register</a> first!
+      If you don't have an account, please Contact the Admin
     </div>
   </ion-row>
 </ion-content>
