--- a/siteMobApp/src/app/dashboard/dashboard.page.html
+++ b/siteMobApp/src/app/dashboard/dashboard.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
     <ion-title>Site Manager's Dash board</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,7 +18,7 @@
     <ion-card-content>
 
     </ion-card-content>
-    <ion-button class = "b1" expand="block">Create Purchase Order</ion-button>
+    <ion-button class = "b1" expand="block" (click) = "navCreatePOrder()">Create Purchase Order</ion-button>
     <ion-button class = "b2" expand="block">View Purchase Order</ion-button>
     <ion-button class = "b3" expand="block">View Delivery Details</ion-button>
   </ion-card>
